<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <RelativeLayout
            android:id="@+id/rl_toolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:elevation="@dimen/_2dp"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/dp12"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/arrow_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp20"
                android:padding="@dimen/dp5"
                android:src="@drawable/arrow_back" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/header_title"
                style="@style/TextBlack16sp"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dp12"
                android:padding="2dp"
                android:text="@string/search_places" />

        </RelativeLayout>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/google_map_request_ride"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rl_toolBar" />

        <EditText
            android:id="@+id/et_search"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginHorizontal="@dimen/dp12"
            android:layout_marginBottom="@dimen/dp12"
            android:hint="@string/search"
            android:paddingStart="@dimen/dp12"
            android:background="@color/white"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="true"
            android:padding="@dimen/dp20"
            app:layout_constraintBottom_toTopOf="@id/et_search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <RelativeLayout
            android:layout_width="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rl_toolBar"
            android:id="@+id/update_list_container"
            android:padding="@dimen/dp20"
            android:visibility="gone"
            android:background="@android:color/background_light"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_do_you"
                style="@style/TextBlack16sp"
                android:text="@string/do_you_want_to_add_this_location_to_list"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/update"
                android:layout_below="@id/tv_do_you"
                android:id="@+id/btn_update"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/dp12"
                android:textSize="@dimen/_16sp" />

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>